# EcommerceJVAV

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  SPEC.md  TASKS.md  alembic.ini  composer.json  config.py  database.py  dependencies.py  docker-compose.yml  env.example  gitignore  main.py  package-lock.json  pyproject.toml  requirements.txt  samconfig.toml  security.py  seed_dynamodb.py  seed_products.py  template.yaml
.claude/agents/: compliance-reviewer.md
.gemini/rules/: openspec-tasks-mandatory-steps.md
.github/workflows/: ci-cd.yml  ci.yml
alembic/: env.py
backend/: admin_service.py  app.py  cart_service.py  category_service.py  config.py  database.py  dependencies.py  deps.py  limiter.py  main.py  pricing.py  security.py  uploads_service.py
backend/db/: dynamo.py  keys.py  (+1 more)
docs/: backend-standards.md  base-standards.md  frontend-standards.md  roadmap-plataforma-multicanal.md
frontend/: cart.html  checkout.html  forgot-password.html  index.html  login.html  order-confirm.html  orders.html  product.html  wishlist.html
openspec/: config.yaml  project.md
tests/: conftest.py  test_admin.py  test_auth.py  test_cart.py  test_orders.py  test_products.py
tests_serverless/: conftest.py  test_admin_categories_uploads.py  test_admin_panel.py  test_auth.py  test_cart_checkout.py  test_catalog.py  test_channels.py  test_crm_erp.py  test_integrations.py  test_marketplaces.py  test_pos_payments.py  test_seed.py  test_social_google.py  test_store_config.py  test_unit_connectors.py  test_unit_core.py  test_wishlist_pickup.py
(+257 files in other folders)
